backend/cluster/k3s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bc-ai-account
  labels:
    app.kubernetes.io/name: bc-ai-account
